adjust really long lines

--- a/Rao-Blackwellization/main.ipynb
+++ b/Rao-Blackwellization/main.ipynb
@@ -22,7 +22,7 @@
     "where $\\mu$ is the location parameter and $\\sigma$ is the scale parameter.\n",
     "\n",
     "Using Dickey's decomposition, we can simulate the non-standard Student's t-distribution as a gamma mixture of normal distribution:\n",
-    "$X\\ |\\ y \\sim \\mathcal{N}(\\mu, \\sigma^2y) \\text{ and } Y^{-1}\\sim \\Gamma(\\frac{\\nu}{2},\\frac{2}{\\nu}) \\Rightarrow X \\sim \\mathcal{T}(\\nu,\\mu,\\sigma^2) $\n",
+    "$$X\\ |\\ y \\sim \\mathcal{N}(\\mu, \\sigma^2y) \\text{ and } Y^{-1}\\sim \\Gamma(\\frac{\\nu}{2},\\frac{2}{\\nu}) \\Rightarrow X \\sim \\mathcal{T}(\\nu,\\mu,\\sigma^2) $$\n",
     "\n",
     "In this example, we are interested in estimating the expected value of $h(x)=\\exp(-x^2)$ for $X \\sim \\mathcal{T}(\\nu,\\mu,\\sigma^2)$ using samples $\\{(y_i,x_i),i=1,2,...n\\}$ generated from the distribution. We would compare two different estimators: naive estimator and Rao-Blacwellized estimator based on the naive estimator.\n",
     "\n",
@@ -61,7 +61,8 @@
     "nu = 4.6\n",
     "mu = 0.0\n",
     "sigma = 1.0\n",
-    "## the true value of the expectation of exp(-x^2) calculated using numerical integration\n",
+    "## the true value of the expectation of exp(-x^2) calculated \n",
+    "## using numerical integration\n",
     "trueValue = 0.537332 "
    ]
   },
@@ -73,7 +74,8 @@
    },
    "outputs": [],
    "source": [
-    "### repeat the estimations of exp(-x^2) to get the variance of the estimation\n",
+    "## repeat the estimations of exp(-x^2) to get the variance \n",
+    "## of the estimation\n",
     "R = 50 # num of repeats\n",
     "naive = []\n",
     "RaoBlackwellization = []\n",
@@ -100,8 +102,9 @@
     "    RaoBlackwellizedEstimate = []\n",
     "    RaoBlackwellizedCumsum = 0.0\n",
     "    for i in range(N):\n",
-    "        RaoBlackwellizedCumsum += 1.0 / np.sqrt(2.0 * data[i][1] + 1)\n",
-    "        RaoBlackwellizedEstimate.append(RaoBlackwellizedCumsum / float(i+1))\n",
+    "        RaoBlackwellizedCumsum += 1.0/np.sqrt(2.0 * data[i][1] + 1)\n",
+    "        RaoBlackwellizedEstimate.append(\n",
+    "            RaoBlackwellizedCumsum/float(i+1))\n",
     "    RaoBlackwellization.append(RaoBlackwellizedEstimate)\n",
     "    r+=1\n",
     "\n",
@@ -151,7 +154,8 @@
     "\n",
     "RaoBlackwellization = np.array(RaoBlackwellization)\n",
     "RaoBlackwellizationMean = RaoBlackwellization.mean(0)\n",
-    "RaoBlackwellizationStd = np.sqrt(((RaoBlackwellization - trueValue)**2).mean(0))\n",
+    "RaoBlackwellizationStd = \n",
+    "  np.sqrt(((RaoBlackwellization - trueValue)**2).mean(0))\n",
     "\n",
     "native = np.array(native)\n",
     "nativeMean = native.mean(0)\n",
@@ -159,10 +163,12 @@
     "\n",
     "plt.plot(naiveStd, label = \"naive\", color = \"red\", linewidth = 1.5)\n",
     "plt.plot(nativeStd, label = \"native\", color = \"black\", linewidth = 1.5)\n",
-    "plt.plot(RaoBlackwellizationStd, label = \"Rao-Blackwellization\", color = \"blue\", linewidth = 1.5)\n",
+    "plt.plot(RaoBlackwellizationStd, label = \"Rao-Blackwellization\", \n",
+    "         color = \"blue\", linewidth = 1.5)\n",
     "plt.ylim(-0.05)\n",
     "plt.legend()\n",
-    "plt.title(\"Estimation of exp(-X^2) for Student's t distribution\",fontsize = 15)\n",
+    "plt.title(\"Estimation of exp(-X^2) for Student's t distribution\",\n",
+    "          fontsize = 15)\n",
     "plt.xlabel(\"num of draws\", fontsize = 15)\n",
     "plt.ylabel(\"RMSE\",fontsize = 15)"
    ]
@@ -197,9 +203,12 @@
    ],
    "source": [
     "## standard variation \n",
-    "plt.errorbar(range(500)[::10],nativeMean[::10], yerr = nativeStd[::10], color = \"black\")\n",
-    "plt.errorbar(range(500)[::10],naiveMean[::10], yerr = naiveStd[::10], color = \"red\")\n",
-    "plt.errorbar(range(500)[::10],RaoBlackwellizationMean[::10], yerr = RaoBlackwellizationStd[::10], color = \"blue\")\n",
+    "plt.errorbar(range(500)[::10],nativeMean[::10], \n",
+    "             yerr = nativeStd[::10], color = \"black\")\n",
+    "plt.errorbar(range(500)[::10],naiveMean[::10], \n",
+    "             yerr = naiveStd[::10], color = \"red\")\n",
+    "plt.errorbar(range(500)[::10],RaoBlackwellizationMean[::10], \n",
+    "             yerr = RaoBlackwellizationStd[::10], color = \"blue\")\n",
     "plt.hlines(y=trueValue,xmin = 0,xmax = 500)\n",
     "plt.title(\"Standard Variation for Estimators across Repeating Runs\")\n",
     "plt.ylim((0.3,0.7))"
@@ -236,16 +245,20 @@
    "source": [
     "## plot some sample estimations\n",
     "plt.clf()\n",
-    "plt.plot([trueValue for i in range(N)], label = \"True Value\", color = \"cyan\")\n",
+    "plt.plot([trueValue for i in range(N)], \n",
+    "         label = \"True Value\", color = \"cyan\")\n",
     "plt.plot(naive[0,:], label = \"naive\", color = \"red\")\n",
     "plt.plot(naive[10,:], color = \"red\")\n",
     "plt.plot(native[0,:], label = \"native\", color = \"black\")\n",
     "plt.plot(native[10,:], color = \"black\")\n",
-    "plt.plot(RaoBlackwellization[0,:], label = \"Rao-Blackwellization\", color = \"blue\")\n",
+    "plt.plot(RaoBlackwellization[0,:], \n",
+    "         label = \"Rao-Blackwellization\", color = \"blue\")\n",
     "plt.plot(RaoBlackwellization[10,:], color = \"blue\")\n",
     "plt.ylim((0.40, 0.65))\n",
     "plt.legend()\n",
-    "plt.title(\"Examples for Estimation of exp(-X^2) of Student's t distribution\", fontsize = 15)\n",
+    "plt.title(\"Examples for Estimation of exp(-X^2) of \\\n",
+    "          Student's t distribution\",\n",
+    "          fontsize = 15)\n",
     "plt.xlabel(\"num of draws\")\n",
     "plt.ylabel(\"estimated value\")"
    ]
@@ -281,7 +294,8 @@
     "X = np.linspace(-10,10,200)\n",
     "original_den = stats.t.pdf(X, nu, loc = mu, scale = sigma)\n",
     "\n",
-    "#### calcuate absolute error (AE) for naive method and Rao-Blackwellization method                                                                                                           \n",
+    "#### calcuate absolute error (AE) for naive method and \n",
+    "#### Rao-Blackwellization method                                                                                                           \n",
     "## simulate (X,Y) from the joint distribution                                                                                                                                                \n",
     "N = 1000\n",
     "data = []\n",
@@ -300,7 +314,8 @@
     "for k in range(50,N+1,50):\n",
     "    ## print(k)\n",
     "    ## density estimation using kernel method                                                                                                                                                \n",
-    "    kde = KernelDensity(kernel = \"gaussian\", bandwidth = 0.5).fit(X_sample[0:k])\n",
+    "    kde = KernelDensity(kernel = \"gaussian\", \n",
+    "                        bandwidth = 0.5).fit(X_sample[0:k])\n",
     "    log_den = kde.score_samples(np.reshape(X, (-1,1)))\n",
     "    naive_den = np.exp(log_den)\n",
     "    naive_AE.append(np.sum(np.abs(naive_den - original_den)))\n",
@@ -310,10 +325,12 @@
     "    for x in X:\n",
     "        cumsum = 0.0\n",
     "        for y in Y_sample[0:k]:\n",
-    "            cumsum += stats.norm.pdf(x, loc = mu, scale = np.sqrt(sigma**2*y))\n",
+    "            cumsum += stats.norm.pdf(x, loc = mu, \n",
+    "                                     scale = np.sqrt(sigma**2*y))\n",
     "        RaoBlackwellized_den.append(cumsum / k)\n",
     "    RaoBlackwellized_den = np.array(RaoBlackwellized_den)\n",
-    "    RaoBlackwellized_AE.append(np.sum(np.abs(RaoBlackwellized_den - original_den)))"
+    "    RaoBlackwellized_AE.append(np.sum(np.abs(RaoBlackwellized_den \n",
+    "                                             - original_den)))"
    ]
   },
   {
@@ -345,11 +362,15 @@
     }
    ],
    "source": [
-    "plt.plot(range(50,N+1,50), naive_AE, label = \"naive\", color = \"red\", linewidth = 3)\n",
-    "plt.plot(range(50,N+1,50), RaoBlackwellized_AE, label = \"Rao-Blackwellization\", color = \"blue\", linewidth = 3)\n",
+    "plt.plot(range(50,N+1,50), naive_AE, label = \"naive\", \n",
+    "         color = \"red\", linewidth = 3)\n",
+    "plt.plot(range(50,N+1,50), RaoBlackwellized_AE, \n",
+    "         label = \"Rao-Blackwellization\", \n",
+    "         color = \"blue\", linewidth = 3)\n",
     "plt.xlabel(\"num of samples\", fontsize = 15)\n",
     "plt.ylabel(\"absolute error\", fontsize = 15)\n",
-    "plt.title(\"Absolute Error for Density Estimation\", fontsize = 15)\n",
+    "plt.title(\"Absolute Error for Density Estimation\", \n",
+    "          fontsize = 15)\n",
     "plt.legend()"
    ]
   },
@@ -366,7 +387,8 @@
     "for x in X:              \n",
     "    cumsum = 0.0         \n",
     "    for y in Y_sample:   \n",
-    "        cumsum += stats.norm.pdf(x, loc = mu, scale = np.sqrt(sigma**2*y))\n",
+    "        cumsum += stats.norm.pdf(x, loc = mu, \n",
+    "                                 scale = np.sqrt(sigma**2*y))\n",
     "    RaoBlackwellized_den.append(cumsum / N)                                                                                                                                        "
    ]
   },
@@ -409,11 +431,16 @@
     "## plot\n",
     "naive_AE = np.sum(np.abs(naive_den - original_den)) \n",
     "RaoBlackwellized_AE = np.sum(np.abs(RaoBlackwellized_den - original_den))  \n",
-    "print(\"naive: {0:.4f}, Rao-Blackwellization: {1:.4f}\".format(naive_AE, RaoBlackwellized_AE))\n",
+    "print(\"naive: {0:.4f}, Rao-Blackwellization: {1:.4f}\".format(\n",
+    "        naive_AE, RaoBlackwellized_AE))\n",
     "plt.subplot(121)                                                                            \n",
-    "plt.fill(X, original_den, label = \"original\", fc='black', alpha=0.2)                        \n",
-    "plt.plot(X, naive_den, label = \"naive:{0:.2f}\".format(naive_AE), color = \"red\", linewidth = 2)\n",
-    "plt.plot(X, RaoBlackwellized_den, label = \"Rao-Blackwell:{0:.2f}\".format(RaoBlackwellized_AE), color = \"blue\", linewidth = 2)\n",
+    "plt.fill(X, original_den, label = \"original\", fc='black', \n",
+    "         alpha=0.2)                        \n",
+    "plt.plot(X, naive_den, label = \"naive:{0:.2f}\".format(naive_AE), \n",
+    "         color = \"red\", linewidth = 2)\n",
+    "plt.plot(X, RaoBlackwellized_den, \n",
+    "         label = \"Rao-Blackwell:{0:.2f}\".format(RaoBlackwellized_AE),\n",
+    "         color = \"blue\", linewidth = 2)\n",
     "plt.title(\"Estimated Density with 500 Samples\", fontsize = 15)\n",
     "plt.xlim((-12,12))\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)"
@@ -426,15 +453,6 @@
     "## 3. Summary\n",
     "As shown in both point estimation and density estimation examples, the Rao-Blackwellized estimators are better than the original estimator used for constructing the Rao-Blackwellized estimators."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
