--- a/Hit_Run_Sampler/main.ipynb
+++ b/Hit_Run_Sampler/main.ipynb
@@ -866,15 +866,50 @@
     "\n",
     "This distribution arise from one of my research projects. In the project, sampling from the distribution is required. I originally thought that the distribution seems pretty standard and there must be some standard method for sampling directly from it, like the method for sampling from the uniform distribution on the unit simplex. However, after some searching, I realize it is not the case. I still do not find existing methods for sampling directly from it.\n",
     "\n",
-    "To work around it, I turn to Markov Chain Monte Carlo method."
+    "To work around it, I turn to Markov Chain Monte Carlo methods."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Gibbs Sampler"
+    "### 2.1 Gibbs Sampler\n",
+    "After a simple manipulation, we can see that sampling from the above distribution is equivalent to sampling from the following distribution:\n",
+    "\n",
+    "$$p((x_1,x_2,...,x_n)) = \\text{exp}(a_{n+1}) \\cdot \\frac{\\text{exp}((a_1 - a_{n+1}) x_1 + (a_2 - a_{n+1}) x_2 + ... + (a_{n} - a_{n+1})x_{n})}{Z}$$\n",
+    "\n",
+    "where $0 \\leq \\sum_{i=1}^{n}{x_i} \\leq 1$ and $x_i \\geq 0$ for $i = 1,2,...,n.$\n",
+    "\n",
+    "One method for sampling from this distribution is the Gibbs sampler, which samples each individual $x_i$ successively from its conditional distribution given all other $x_j, j \\neq i$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def restricted_exp_sample(c = 1, a = 0, b = 1):\n",
+    "    \"\"\"\n",
+    "    Sample from the exponential distribution $p(x) \\propto \\text{exp}(c*x)$ restricted in the interval [a,b]\n",
+    "    \"\"\"\n",
+    "    u = np.random.uniform()\n",
+    "    return 1.0/c * np.log(np.exp(c*a) + u * (exp(c*b) - exp(c*a)))\n",
+    "\n",
+    "def Gibbs_Sampler(a_list):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
